--- a/t00/index.html
+++ b/t00/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T00</title>
+    <title>Prototype</title>
 </head>
+
 <body>
     <h1>Prototype</h1>
     <script src="./js/script.js"></script>
+    <script src="./js/test.js"></script>
 </body>
+
 </html>
