--- a/t04/index.html
+++ b/t04/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T04</title>
+    <title>Modules</title>
+    <script type="module" src="js/main.js"></script>
 </head>
 
 <body>
-    <h1>Mixin</h1>
-    <script src="./js/script.js"></script>
-    <script src="./js/houseBuilder.js"></script>
+    <h1>Modules</h1>
+
 </body>
 
 </html>
