--- a/t08/index.html
+++ b/t08/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Collections</title>
+    <title>Step generator</title>
+    <script src="./js/script.js" defer></script>
 </head>
 
 <body>
-    <h1>Collections</h1>
-
-    <script src="js/script.js"></script>
+    <h1>Step generator</h1>
 </body>
 
 </html>
